# 7thProject/openapi.json
@@ -21,6 +21,46 @@
     }
   ],
   "paths": {
+    "/api/v1/tours/tour/{name}/booking": {
+      "post": {
+        "tags": [
+          "tour-controller"
+        ],
+        "operationId": "bookTour",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BookingDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/Customer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/tours": {
       "get": {
         "tags": [
@@ -44,15 +84,15 @@
         }
       }
     },
-    "/api/v1/tours/{continent}": {
+    "/api/v1/tours/tour/{name}": {
       "get": {
         "tags": [
           "tour-controller"
         ],
-        "operationId": "getToursByContinent",
+        "operationId": "getTour",
         "parameters": [
           {
-            "name": "continent",
+            "name": "name",
             "in": "path",
             "required": true,
             "schema": {
@@ -66,10 +106,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Tour"
-                  }
+                  "$ref": "#/components/schemas/Tour"
                 }
               }
             }
@@ -178,10 +215,101 @@
           }
         }
       }
+    },
+    "/api/v1/tours/continent/{continent}": {
+      "get": {
+        "tags": [
+          "tour-controller"
+        ],
+        "operationId": "getToursByContinent",
+        "parameters": [
+          {
+            "name": "continent",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Tour"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/tours/comments": {
+      "get": {
+        "tags": [
+          "tour-controller"
+        ],
+        "operationId": "getComments",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Comment"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/entry": {
+      "get": {
+        "tags": [
+          "tour-controller"
+        ],
+        "operationId": "getEntry",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/Entry"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "BookingDto": {
+        "type": "object",
+        "properties": {
+          "phoneNum": {
+            "type": "string"
+          },
+          "comment": {
+            "type": "string"
+          },
+          "seatsOrder": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "Comment": {
         "type": "object",
         "properties": {
@@ -197,9 +325,6 @@
           },
           "photoComment": {
             "$ref": "#/components/schemas/PhotoComment"
-          },
-          "tour": {
-            "$ref": "#/components/schemas/Tour"
           }
         }
       },
@@ -287,12 +412,6 @@
           "photoTour": {
             "$ref": "#/components/schemas/PhotoTour"
           },
-          "customers": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Customer"
-            }
-          },
           "comments": {
             "type": "array",
             "items": {
@@ -301,6 +420,24 @@
           },
           "continent": {
             "type": "string"
+          }
+        }
+      },
+      "Entry": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "photoTour": {
+            "$ref": "#/components/schemas/PhotoTour"
           }
         }
       }
