# 7thProject/src/main/java/com/example/project/dto/BookingDto.java
@@ -1,0 +1,16 @@
+package com.example.project.dto;
+
+
+import lombok.*;
+import lombok.experimental.FieldDefaults;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class BookingDto {
+    String phoneNum;
+    String comment;
+    int seatsOrder;
+}
