# 7thProject/src/main/java/com/example/project/dto/CustomerDto.java
@@ -1,16 +1,0 @@
-//package com.example.project.dto;
-//
-//
-//import lombok.*;
-//import lombok.experimental.FieldDefaults;
-//
-//@Getter
-//@Setter
-//@AllArgsConstructor
-//@NoArgsConstructor
-//@FieldDefaults(level = AccessLevel.PRIVATE)
-//public class CustomerDto {
-//    String phone_num;
-//    String description;
-//    int seatsOrder;
-//}
