# 7thProject/src/main/java/com/example/project/entity/Customer.java
@@ -29,18 +29,14 @@ public class Customer {
      @Column(name = "booked")
      boolean booked;
 
-     @Column(name = "wishes_to_trip")
-     String wishes_to_trip;
-
      @ManyToOne
      @JoinColumn(name = "tour_id", referencedColumnName = "id")
      Tour tour;
 
-    public Customer(String phone_num, int seats_order, boolean booked, String wishes_to_trip, Tour tour) {
+    public Customer(String phone_num, int seats_order, boolean booked, Tour tour) {
         this.phone_num = phone_num;
         this.seats_order = seats_order;
         this.booked = booked;
-        this.wishes_to_trip = wishes_to_trip;
         this.tour = tour;
     }
 }
